--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,37 +28,34 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  http: ^1.2.2
-  shared_preferences: ^2.5.1
-  syncfusion_flutter_gauges: ^28.2.4
-  syncfusion_flutter_charts: ^28.2.4+1
-  get: ^4.6.6
-  table_calendar: ^3.0.9
-  just_audio: ^0.9.35
-  video_player: ^2.9.5
   flutter_localizations:
-    sdk: flutter  
+    sdk: flutter
+  get: ^4.6.6
+  http: ^1.2.2
+  intl: ^0.19.0
+  just_audio: ^0.9.35
+  shared_preferences: ^2.5.1
+  syncfusion_flutter_charts: ^28.2.4+1
+  syncfusion_flutter_gauges: ^28.2.4
+  table_calendar: ^3.0.9
+  video_player: ^2.9.5
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  smooth_page_indicator: ^1.0.0+2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
+  smooth_page_indicator: ^1.0.0+2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -70,14 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
