--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
     sdk: flutter
   get: ^4.6.6
   http: ^1.2.2
-  intl: ^0.20.2
   just_audio: ^0.9.35
   shared_preferences: ^2.5.1
   syncfusion_flutter_charts: ^28.2.4+1
@@ -53,6 +52,30 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   smooth_page_indicator: ^1.0.0+2
+  flutter_launcher_icons: ^0.14.4
+  
+  
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21
+
+  web:
+    generate: true
+    image_path: "assets/images/logo.png"
+    background_color: "#ffffff"
+    theme_color: "#000000"
+
+  windows:
+    generate: true
+    image_path: "assets/images/logo.png"
+    icon_size: 48
+
+  macos:
+    generate: true
+    image_path: "assets/images/logo.png"
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
